Set Dark mode as default Fixed header spacing

--- a/themes/zdoc/assets/sass/layout/_header.scss
+++ b/themes/zdoc/assets/sass/layout/_header.scss
@@ -19,9 +19,9 @@
       font-size: 3rem;
       font-weight: 900;
       font-family: $title-font;
-      line-height: 3rem;
+      line-height: 3.5rem;
       overflow-wrap: break-word;
-      margin: 2rem 1.5rem;
+      margin: 1rem 1.5rem;
 
       @include themify($themes) {
         color: themed("title-color");
